<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.example.android.quizapp.MainActivity">


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="32dp"
        card_view:cardCornerRadius="16dp"
        card_view:cardElevation="16dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/QuestionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1_title" />

                <TextView
                    style="@style/QuestionStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question1" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton

                        android:id="@+id/radio_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_main" />

                    <RadioButton
                        android:id="@+id/radio_implements"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_implements" />

                    <RadioButton
                        android:id="@+id/radio_extends"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_extends" />

                </RadioGroup>


                <TextView
                    style="@style/QuestionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2_title" />

                <TextView
                    style="@style/QuestionStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question2" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_java_lang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_java_lang" />

                    <RadioButton
                        android:id="@+id/radio_java_awt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_java_awt" />

                    <RadioButton
                        android:id="@+id/radio_java_awt_"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_java_awt_font" />

                </RadioGroup>


                <TextView
                    style="@style/QuestionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_3_title" />

                <TextView
                    style="@style/QuestionStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question3" />

                <EditText
                    android:id="@+id/user_input_programming_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_programming_language_for_android"
                    android:inputType="text"
                    android:maxLines="10" />


                <TextView
                    style="@style/QuestionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_4_title" />

                <TextView
                    style="@style/QuestionStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question4" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkboxQuest4AnswerTrue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textColor="#000000"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_true" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkboxQuest4AnswerLong"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textColor="#000000"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_long" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkboxQuest4AnswerStatic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textColor="#000000"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_static" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkboxQuest4AnswerEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textColor="#000000"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_end" />

                </LinearLayout>

                <TextView
                    style="@style/QuestionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_5_title" />

                <TextView
                    style="@style/QuestionStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question5" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkboxQuest5AnswerInt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textColor="#000000"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_int" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkboxQuest5AnswerShort"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textColor="#000000"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_short" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkboxQuest5AnswerByte"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textColor="#000000"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_byte" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkboxQuest5AnswerEnum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textColor="#000000"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_enum" />

                </LinearLayout>

                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_submit"
                    android:layout_gravity="center_horizontal"
                    />

            </LinearLayout>


        </ScrollView>

    </android.support.v7.widget.CardView>

</RelativeLayout>
